--- a/www/css/style.css
+++ b/www/css/style.css
@@ -102,6 +102,11 @@ textarea.form-control {
     justify-content: flex-end;
 }
 
+.btn-background{
+    background-color: darkorange;
+    color: #fff;
+}
+
 .btn-primary {
     background-color: #007bff;
     color: white;
