cssに.bg-changed を追加。バグを修正

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -107,6 +107,10 @@ textarea.form-control {
     color: #fff;
 }
 
+.bg-changed {
+    background-color: #fff3cd;
+}
+
 .btn-primary {
     background-color: #007bff;
     color: white;
